加入travis自动发布03

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
         - npm run prepublish
         - npm run predeploy
         - npm run deploy
+        - npm publish
         - echo "NPM Building Finished."
 
       deploy:
