--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 
 deploy:
   provider: npm
-  email: "${GITHUB_TOKEN}"
+  email: "${NPM_EAMIL}"
   api_key: "${NPM_TOKEN}"
   skip_cleanup: true
   on:
