--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "react-html-parser": "^2.0.2",
+    "html-encoder-decoder": "^1.3.8"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
